# godot-chess

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: GodotHelpers.cmake
godot/: Button.gd  Button.tscn  GamePlay.gd  Label.gd  Main.tscn  project.godot
godot/sounds/: black_move.wav.import  capture.wav.import  check.wav.import  checkmate.wav.import  white_move.wav.import
godot/sprites/: Pieces.png.import
src/: CMakeLists.txt  Chess.cpp  Chess.hpp  ChessLibrary.cpp  ChessWrapper.cpp  ChessWrapper.hpp
